Bug 210204 - Only use Mac system menu for root chrome shell XUL menus. Display all other XUL menus as on other platforms. r=bz, sr=roc